fix: fixed up several missing tool related tooltips

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -67,7 +67,7 @@
     "tetra.holo.craft.materials.stat.tertiary.short": "flex",
     "tetra.holo.craft.materials.stat.tertiary.tooltip": "The material's flexibility or tensile strength, how fast does this material spring back when bent",
     "tetra.holo.craft.materials.stat.tool_level": "Tool tier",
-    "tetra.holo.craft.materials.stat.tool_level.short": "ttie",
+    "tetra.holo.craft.materials.stat.tool_level.short": "ttir",
     "tetra.holo.craft.materials.stat.tool_level.tooltip": "The base value for tool tier for modules crafted from this material",
     "tetra.holo.craft.materials.stat.tool_efficiency": "Tool efficiency",
     "tetra.holo.craft.materials.stat.tool_efficiency.short": "teff",
@@ -109,26 +109,26 @@
     "tetra.workbench.schematic_detail.level_tooltip": "Crafting this requires more experience levels than what you currently have",
     "tetra.workbench.schematic_list.temporary": "Made available due to an item in your inventory or from a nearby schematic",
     "tetra.repair_action.label": "Repair",
-    "tetra.tool.hammer": "Hammer",
-    "tetra.tool.hammer.requirement": "This action requires a tier %d hammer",
-    "tetra.tool.hammer.craft_requirement": "Crafting requires a tier %d hammer",
-    "tetra.tool.hammer.material_requirement": "The base requirement for working this material is a tier %d hammer, the requirement may shift based on what the material is used for.",
-    "tetra.tool.axe": "Axe",
-    "tetra.tool.axe.requirement": "This action requires a tier %d axe",
-    "tetra.tool.axe.craft_requirement": "Crafting requires a tier %d axe",
-    "tetra.tool.axe.material_requirement": "The base requirement for working this material is a tier %d axe, the requirement may shift based on what the material is used for.",
-    "tetra.tool.pickaxe": "Pickaxe",
-    "tetra.tool.pickaxe.requirement": "This action requires a tier %d pickaxe",
-    "tetra.tool.pickaxe.craft_requirement": "Crafting requires a tier %d pickaxe",
-    "tetra.tool.pickaxe.material_requirement": "The base requirement for working this material is a tier %d pickaxe, the requirement may shift based on what the material is used for.",
-    "tetra.tool.shovel": "Shovel",
-    "tetra.tool.shovel.requirement": "This action requires a tier %d shovel",
-    "tetra.tool.shovel.craft_requirement": "Crafting requires a tier %d shovel",
-    "tetra.tool.shovel.material_requirement": "The base requirement for working this material is a tier %d shovel, the requirement may shift based on what the material is used for.",
-    "tetra.tool.hoe": "Cut",
-    "tetra.tool.hoe.requirement": "This action requires a tier %d hoe.",
-    "tetra.tool.hoe.craft_requirement": "Crafting requires a tier %d hoe.",
-    "tetra.tool.hoe.material_requirement": "The base requirement for working this material is a tier %d hoe, the requirement may shift based on what the material is used for.",
+    "tetra.tool.hammer_dig": "Hammer",
+    "tetra.tool.hammer_dig.requirement": "This action requires a tier %d hammer",
+    "tetra.tool.hammer_dig.craft_requirement": "Crafting requires a tier %d hammer",
+    "tetra.tool.hammer_dig.material_requirement": "The base requirement for working this material is a tier %d hammer, the requirement may shift based on what the material is used for.",
+    "tetra.tool.axe_dig": "Axe",
+    "tetra.tool.axe_dig.requirement": "This action requires a tier %d axe",
+    "tetra.tool.axe_dig.craft_requirement": "Crafting requires a tier %d axe",
+    "tetra.tool.axe_dig.material_requirement": "The base requirement for working this material is a tier %d axe, the requirement may shift based on what the material is used for.",
+    "tetra.tool.pickaxe_dig": "Pickaxe",
+    "tetra.tool.pickaxe_dig.requirement": "This action requires a tier %d pickaxe",
+    "tetra.tool.pickaxe_dig.craft_requirement": "Crafting requires a tier %d pickaxe",
+    "tetra.tool.pickaxe_dig.material_requirement": "The base requirement for working this material is a tier %d pickaxe, the requirement may shift based on what the material is used for.",
+    "tetra.tool.shovel_dig": "Shovel",
+    "tetra.tool.shovel_dig.requirement": "This action requires a tier %d shovel",
+    "tetra.tool.shovel_dig.craft_requirement": "Crafting requires a tier %d shovel",
+    "tetra.tool.shovel_dig.material_requirement": "The base requirement for working this material is a tier %d shovel, the requirement may shift based on what the material is used for.",
+    "tetra.tool.hoe_dig": "Cut",
+    "tetra.tool.hoe_dig.requirement": "This action requires a tier %d hoe.",
+    "tetra.tool.hoe_dig.craft_requirement": "Crafting requires a tier %d hoe.",
+    "tetra.tool.hoe_dig.material_requirement": "The base requirement for working this material is a tier %d hoe, the requirement may shift based on what the material is used for.",
     "tetra.tool.cut": "Cut",
     "tetra.tool.cut.requirement": "This action requires a tier %d cutting implement.\n§7Most swords can be used for cutting.",
     "tetra.tool.cut.craft_requirement": "Crafting requires a tier %d cutting implement.",
@@ -435,11 +435,11 @@
     "tetra.stats.unstable.tooltip_short": "Reduces the effective magic capacity of this item's major modules",
     "tetra.stats.workable": "Workable",
     "tetra.stats.workable.tooltip": "Honing this item takes §e%s§r less time",
-    "tetra.stats.hammer.tooltip": "This item can be used for hammering, it's useful for crafting and salvaging\n \n§7Hammer tier: §e%s\n§7Hammer efficiency: §e%s",
-    "tetra.stats.axe.tooltip": "This item can be used for chopping wood\n \n§7Axe tier: §e%s\n§7Axe efficiency: §e%s",
-    "tetra.stats.pickaxe.tooltip": "This item can be used for mining\n \n§7Pickaxe tier: §e%s\n§7Pickaxe efficiency: §e%s",
-    "tetra.stats.shovel.tooltip": "This item can be used for digging\n \n§7Shovel tier: §e%s\n§7Shovel efficiency: §e%s",
-    "tetra.stats.hoe.tooltip": "This item can be used for harvesting plants\n \n§7Hoe tier: §e%s\n§7Hoe efficiency: §e%s",
+    "tetra.stats.hammer_dig.tooltip": "This item can be used for hammering, it's useful for crafting and salvaging\n \n§7Hammer tier: §e%s\n§7Hammer efficiency: §e%s",
+    "tetra.stats.axe_dig.tooltip": "This item can be used for chopping wood\n \n§7Axe tier: §e%s\n§7Axe efficiency: §e%s",
+    "tetra.stats.pickaxe_dig.tooltip": "This item can be used for mining\n \n§7Pickaxe tier: §e%s\n§7Pickaxe efficiency: §e%s",
+    "tetra.stats.shovel_dig.tooltip": "This item can be used for digging\n \n§7Shovel tier: §e%s\n§7Shovel efficiency: §e%s",
+    "tetra.stats.hoe_dig.tooltip": "This item can be used for harvesting plants\n \n§7Hoe tier: §e%s\n§7Hoe efficiency: §e%s",
     "tetra.stats.cut.tooltip": "This item can be used for cutting, usable for crafting and for breaking webs and plants\n \n§7Cut tier: §e%s\n§7Cut efficiency: §e%s",
     "tetra.stats.pry.tooltip": "This item can be used for prying things open, usable for salvaging\n \n§7Pry tier: §e%s\n§7Pry efficiency: §e%s",
     "tetra.stats.tool.tooltip_extended": "A higher tier is required for harvesting tougher blocks and for crafting with tougher materials. Efficiency determines how fast this item can break blocks.",
