--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -171,6 +171,10 @@
     "tetra.stats.draw_strength": "Strength",
     "tetra.stats.draw_strength.tooltip": "Projectiles fired when fully drawn will deal §e%s - %s§r damage and have an initial velocity of §e%s§r blocks per tick",
     "tetra.stats.draw_strength.tooltip_extended": "Damage calculation is based on vanilla projectile behaviour. The lower damage value comes from modules & improvements, the upper damage value is: §f§oupper = lower * 1.5 + 1§r§7. Projectiles fired from a partially drawn bow is based on the lower value, e.g. firing a projectile at 50%% draw will deal 50%% of the lower damage value.",
+    "tetra.stats.power": "Power enchantment",
+    "tetra.stats.power.tooltip": "Magically increases projectile damage by §e%s§r, does not affect projectile velocity",
+    "tetra.stats.quick_charge": "Quick Charge enchantment",
+    "tetra.stats.quick_charge.tooltip": "Magically reduces the draw speed by §e%s§r seconds",
     "tetra.stats.ability_damage": "Damage",
     "tetra.stats.ability_damage.tooltip": "Abilities using this item has a base damage value of §e%s",
     "tetra.stats.bleeding": "Bleeding",
@@ -340,6 +344,8 @@
     "tetra.stats.looting.tooltip": "Increases drops from killing entities",
     "tetra.stats.fiery": "Fiery",
     "tetra.stats.fiery.tooltip": "Hitting an entity sets it on fire for §e%s§f seconds",
+    "tetra.stats.sharpness": "Sharpness enchantment",
+    "tetra.stats.sharpness.tooltip": "Magically increases attack damage by §e%s§r (this is accounted for in the damage value shown above)",
     "tetra.stats.smite": "Smite",
     "tetra.stats.smite.tooltip": "Deals §e%s§r bonus damage when attacking undead entities",
     "tetra.stats.arthropod": "Arthropod",
@@ -435,13 +441,17 @@
     "tetra.stats.unstable.tooltip_short": "Reduces the effective magic capacity of this item's major modules",
     "tetra.stats.workable": "Workable",
     "tetra.stats.workable.tooltip": "Honing this item takes §e%s§r less time",
-    "tetra.stats.hammer_dig.tooltip": "This item can be used for hammering, it's useful for crafting and salvaging\n \n§7Hammer tier: §e%s\n§7Hammer efficiency: §e%s",
-    "tetra.stats.axe_dig.tooltip": "This item can be used for chopping wood\n \n§7Axe tier: §e%s\n§7Axe efficiency: §e%s",
-    "tetra.stats.pickaxe_dig.tooltip": "This item can be used for mining\n \n§7Pickaxe tier: §e%s\n§7Pickaxe efficiency: §e%s",
-    "tetra.stats.shovel_dig.tooltip": "This item can be used for digging\n \n§7Shovel tier: §e%s\n§7Shovel efficiency: §e%s",
-    "tetra.stats.hoe_dig.tooltip": "This item can be used for harvesting plants\n \n§7Hoe tier: §e%s\n§7Hoe efficiency: §e%s",
-    "tetra.stats.cut.tooltip": "This item can be used for cutting, usable for crafting and for breaking webs and plants\n \n§7Cut tier: §e%s\n§7Cut efficiency: §e%s",
-    "tetra.stats.pry.tooltip": "This item can be used for prying things open, usable for salvaging\n \n§7Pry tier: §e%s\n§7Pry efficiency: §e%s",
+    "tetra.stats.hammer_dig.tooltip": "This item can be used for hammering, it's useful for crafting and salvaging",
+    "tetra.stats.axe_dig.tooltip": "This item can be used for chopping wood",
+    "tetra.stats.pickaxe_dig.tooltip": "This item can be used for mining",
+    "tetra.stats.shovel_dig.tooltip": "This item can be used for digging",
+    "tetra.stats.hoe_dig.tooltip": "This item can be used for harvesting plants",
+    "tetra.stats.cut.tooltip": "This item can be used for cutting, usable for crafting and for breaking webs and plants",
+    "tetra.stats.pry.tooltip": "This item can be used for prying things open, usable for salvaging",
+    "tetra.stats.tool.breakdown": "§7Tier: §e%s\n \n§7Efficiency: §e%s\n§7    Base: §e%s\n§7    Swing speed: %sx%s%s",
+    "tetra.stats.tool.efficiency": "Efficiency enchantment",
+    "tetra.stats.tool.efficiency.tooltip": "Magically increases harvest efficiency, unaffected by swing speed",
+    "tetra.stats.tool.enchantment_bonus": "\n§7    Enchantment bonus: §a+%s",
     "tetra.stats.tool.tooltip_extended": "A higher tier is required for harvesting tougher blocks and for crafting with tougher materials. Efficiency determines how fast this item can break blocks.",
     "tetra.stats.tool.striking": "Striking",
     "tetra.stats.tool.striking.tooltip": "Instantly breaks hit blocks, limited by swing speed",
