Add support for dungeons_gear mod enchantments

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2792,6 +2792,92 @@
   "tetra.improvement.destabilized/bluepower_disjunction.name": "§5Destabilized: Disjunction",
   "tetra.improvement.destabilized/bluepower_disjunction.description": "Reduces the effect of the Disjunction enchantment",
   "tetra.improvement.enchantment/ation_magic_protection.name": "Magic Protection",
+  "tetra.improvement.enchantment/dungeons_gear_anima_conduit.name": "Anima Conduit",
+  "tetra.improvement.enchantment/dungeons_gear_anima_conduit.description": "Each soul you absorb grants a small amount of health.",
+  "tetra.improvement.enchantment/dungeons_gear_dynamo.name": "Dynamo",
+  "tetra.improvement.enchantment/dungeons_gear_dynamo.description": "Adds damage to the next attack after jumping or dodging.",
+  "tetra.improvement.enchantment/dungeons_gear_enigma_resonator.name": "Enigma Resonator",
+  "tetra.improvement.enchantment/dungeons_gear_enigma_resonator.description": "Give a chance to inflict 50% more damage based on the amount of souls you have.",
+  "tetra.improvement.enchantment/dungeons_gear_gravity.name": "Gravity",
+  "tetra.improvement.enchantment/dungeons_gear_gravity.description": "This effect pulls mobs in range towards the weapon's impact point.",
+  "tetra.improvement.enchantment/dungeons_gear_poison_cloud.name": "Poison Cloud",
+  "tetra.improvement.enchantment/dungeons_gear_poison_cloud.description": "Has a 30% chance to summon a poison cloud that deals damage to enemies in an area for three seconds.",
+  "tetra.improvement.enchantment/dungeons_gear_refreshment.name": "Refreshment",
+  "tetra.improvement.enchantment/dungeons_gear_refreshment.description": "Defeating a mob can turn a glass bottle in your inventory into a health potion.",
+  "tetra.improvement.enchantment/dungeons_gear_artifact_synergy.name": "Artifact Synergy",
+  "tetra.improvement.enchantment/dungeons_gear_artifact_synergy.description": "Whenever you use an artifact, your next attack deals bonus damage.",
+  "tetra.improvement.enchantment/dungeons_gear_busy_bee.name": "Busy Bee",
+  "tetra.improvement.enchantment/dungeons_gear_busy_bee.description": "Chance to summon a bee after defeating a mob, with up to 3 bees joining your side.",
+  "tetra.improvement.enchantment/dungeons_gear_chains.name": "Chains",
+  "tetra.improvement.enchantment/dungeons_gear_chains.description": "Has a 30% chance to chain a cluster of mobs together and keep them bound for a short time.",
+  "tetra.improvement.enchantment/dungeons_gear_committed.name": "Committed",
+  "tetra.improvement.enchantment/dungeons_gear_committed.description": "Deal increased damage against already wounded enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_critical_hit.name": "Critical Hit",
+  "tetra.improvement.enchantment/dungeons_gear_critical_hit.description": "Gives you a chance to inflict non-standard critical hits.",
+  "tetra.improvement.enchantment/dungeons_gear_echo.name": "Echo",
+  "tetra.improvement.enchantment/dungeons_gear_echo.description": "Every few seconds, your will attack twice.",
+  "tetra.improvement.enchantment/dungeons_gear_exploding.name": "Exploding",
+  "tetra.improvement.enchantment/dungeons_gear_exploding.description": "Mobs explode after they are defeated.",
+  "tetra.improvement.enchantment/dungeons_gear_freezing.name": "Freezing",
+  "tetra.improvement.enchantment/dungeons_gear_freezing.description": "Slows mobs after hit for three seconds.",
+  "tetra.improvement.enchantment/dungeons_gear_guarding_strike.name": "Guarding Strike",
+  "tetra.improvement.enchantment/dungeons_gear_guarding_strike.description": "When you defeat a mob, you are given a temporary shield that reduces damage by 50%.",
+  "tetra.improvement.enchantment/dungeons_gear_illagers_bane.name": "Illager's Bane",
+  "tetra.improvement.enchantment/dungeons_gear_illagers_bane.description": "Attacks deal extra damage to Illagers.",
+  "tetra.improvement.enchantment/dungeons_gear_pain_cycle.name": "Pain Cycle",
+  "tetra.improvement.enchantment/dungeons_gear_pain_cycle.description": "Attacking drains your life to grant one stack of Pain Cycle. At 5 stacks, your pain is channeled into your next attack.",
+  "tetra.improvement.enchantment/dungeons_gear_prospector.name": "Prospector",
+  "tetra.improvement.enchantment/dungeons_gear_prospector.description": "Finds more emeralds and gold on fallen enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_radiance.name": "Radiance",
+  "tetra.improvement.enchantment/dungeons_gear_radiance.description": "Has a 20% chance to spawn a circular area that heals all allies within it.",
+  "tetra.improvement.enchantment/dungeons_gear_rampaging.name": "Rampaging",
+  "tetra.improvement.enchantment/dungeons_gear_rampaging.description": "After defeating a mob, there is a 10% chance to increase your attack speed by 50% for a short time.",
+  "tetra.improvement.enchantment/dungeons_gear_rushdown.name": "Rushdown",
+  "tetra.improvement.enchantment/dungeons_gear_rushdown.description": "After defeating a mob, increase your speed by 100% for a short time.",
+  "tetra.improvement.enchantment/dungeons_gear_shockwave.name": "Shockwave",
+  "tetra.improvement.enchantment/dungeons_gear_shockwave.description": "A critical hit launches a shockwave, damaging enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_soul_siphon.name": "Soul Siphon",
+  "tetra.improvement.enchantment/dungeons_gear_soul_siphon.description": "When you hit an enemy, gain a 10% chance to grant you a bunch of extra souls.",
+  "tetra.improvement.enchantment/dungeons_gear_stunning.name": "Stunning",
+  "tetra.improvement.enchantment/dungeons_gear_stunning.description": "Chance to temporarily stun enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_swirling.name": "Swirling",
+  "tetra.improvement.enchantment/dungeons_gear_swirling.description": "Critical hits become swirling attacks, damaging nearby enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_thundering.name": "Thundering",
+  "tetra.improvement.enchantment/dungeons_gear_thundering.description": "Has a 30% chance to summon a lightning strike that damages nearby enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_weakening.name": "Weakening",
+  "tetra.improvement.enchantment/dungeons_gear_weakening.description": "Your attacks decrease the attack damage of nearby enemies for five seconds.",
+  "tetra.improvement.enchantment/dungeons_gear_accelerate.name": "Accelerate",
+  "tetra.improvement.enchantment/dungeons_gear_accelerate.description": "Increases charge speed for each consecutive shot. Resets one second after firing.",
+  "tetra.improvement.enchantment/dungeons_gear_bonus_shot.name": "Bonus Shot",
+  "tetra.improvement.enchantment/dungeons_gear_bonus_shot.description": "Firing a shot also fires a second shot at a nearby enemy. The second shot has reduced damage.",
+  "tetra.improvement.enchantment/dungeons_gear_burst_bowstring.name": "Burst Bowstring",
+  "tetra.improvement.enchantment/dungeons_gear_burst_bowstring.description": "Shoots nearby mobs when you roll, costing one arrow per roll. Projectiles deal 40% of a charged shot's damage.",
+  "tetra.improvement.enchantment/dungeons_gear_chain_reaction.name": "Chain Reaction",
+  "tetra.improvement.enchantment/dungeons_gear_chain_reaction.description": "Has a chance to fire four arrows in all directions on impact.",
+  "tetra.improvement.enchantment/dungeons_gear_cooldown_shot.name": "Cooldown Shot",
+  "tetra.improvement.enchantment/dungeons_gear_cooldown_shot.description": "When you attack with a charged shot, artifact cooldowns are decreased.",
+  "tetra.improvement.enchantment/dungeons_gear_fuse_shot.name": "Fuse Shot",
+  "tetra.improvement.enchantment/dungeons_gear_fuse_shot.description": "Every few shots explodes after impact, dealing damage to nearby enemies.",
+  "tetra.improvement.enchantment/dungeons_gear_growing.name": "Growing",
+  "tetra.improvement.enchantment/dungeons_gear_growing.description": "The fired shot grows in the air, dealing extra damage to distant targets.",
+  "tetra.improvement.enchantment/dungeons_gear_overcharge.name": "Overcharge",
+  "tetra.improvement.enchantment/dungeons_gear_overcharge.description": "Continue to hold the ranged attack button to double, triple, or quadruple charge a bow, increasing its damage each time.",
+  "tetra.improvement.enchantment/dungeons_gear_radiance_shot.name": "Radiance Shot",
+  "tetra.improvement.enchantment/dungeons_gear_radiance_shot.description": "Has a 20% chance to spawn a circular area that heals all allies within it.",
+  "tetra.improvement.enchantment/dungeons_gear_replenish.name": "Replenish",
+  "tetra.improvement.enchantment/dungeons_gear_replenish.description": "Chance to immediately replenish an arrow after shooting.",
+  "tetra.improvement.enchantment/dungeons_gear_ricochet.name": "Ricochet",
+  "tetra.improvement.enchantment/dungeons_gear_ricochet.description": "Small chance for arrows to ricochet off mobs.",
+  "tetra.improvement.enchantment/dungeons_gear_roll_charge.name": "Roll Charge",
+  "tetra.improvement.enchantment/dungeons_gear_roll_charge.description": "When you perform a jump or dodge, your next ranged attack within the timing window will automatically be fully charged.",
+  "tetra.improvement.enchantment/dungeons_gear_shock_web.name": "Shock Web",
+  "tetra.improvement.enchantment/dungeons_gear_shock_web.description": "Beams of lightning connect the last few charged arrows fired, which deal lightning damage to enemies who touch a beam.",
+  "tetra.improvement.enchantment/dungeons_gear_tempo_theft.name": "Tempo Theft",
+  "tetra.improvement.enchantment/dungeons_gear_tempo_theft.description": "Steals a small amount of a mob's movement speed and gives it to you for four seconds.",
+  "tetra.improvement.enchantment/dungeons_gear_wild_rage.name": "Wild Rage",
+  "tetra.improvement.enchantment/dungeons_gear_wild_rage.description": "Hitting an enemy has a chance to send it into a rage, making it hostile towards everyone.",
+  "tetra.improvement.enchantment/dungeons_gear_leeching.name": "Leeching",
+  "tetra.improvement.enchantment/dungeons_gear_leeching.description": "Defeating a mob heals you a small portion of the mob's max health.",
   "tetra.improvement.enchantment/ensorcellation_magic_protection.description": "Reduces damage taken from magical sources.",
   "tetra.improvement.destabilized/ensorcellation_magic_protection.name": "§5Destabilized: Magic Protection",
   "tetra.improvement.destabilized/ensorcellation_magic_protection.description": "Reduces the effect of the Magic Protection enchantment",
