[I18n] Allow modular items not to show spaces in their names
Did not allow how the names were shown to be completely customable (suppose Iron Sword in a language is called as SwordIronmale, and Iron Hoe in this language is called as HoeIronfemale, the names would not be shown correctly).

--- a/src/main/resources/assets/tetra/lang/zh_tw.json
+++ b/src/main/resources/assets/tetra/lang/zh_tw.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.tetra":"Tetra",
+  "tetra.langSetting.noSpace": "1",
   "tetra.attribute.draw_strength.name":"拉弓力量",
   "tetra.attribute.draw_speed.name":"拉弓時間",
   "tetra.attribute.ability_damage.name":"特殊功能傷害",
