fix: fixed sweeping edge not affecting sweep damage

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -357,7 +357,7 @@
     "tetra.stats.sweeping.level": "Sweep Damage",
     "tetra.stats.sweeping.efficiency": "Sweep Area",
     "tetra.stats.sweeping.tooltip": "Attacking an entity also hits all adjacent enemies within a §e%s§r block radius for §e%s§r weapon damage",
-    "tetra.stats.sweeping.tooltip_extended": "Sweeping attacks do not trigger when attacking mid-air or while sprinting.",
+    "tetra.stats.sweeping.tooltip_extended": "Sweeping attacks do not trigger when attacking mid-air, while sprinting or when attacking during swing cooldown.",
     "tetra.stats.truesweep": "Truesweep",
     "tetra.stats.truesweep.tooltip": "Entities hit by a sweep are affected by enchantments and item effects. Swinging triggers the sweeping effect even if it does not hit an entity.",
     "tetra.stats.truesweep.tooltip_extended": "Enchantments include both bonus damage from enchantments like smite and effects from enchantments like fire aspect. Item effects refers to effects like bleeding or critical strike.",
