change: added bamboo as a material

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -500,6 +500,8 @@
     "tetra.material.shulker_shell.prefix": "Shulker shell",
     "tetra.material.stick": "Stick",
     "tetra.material.stick.prefix": "Flimsy",
+    "tetra.material.bamboo": "Bamboo",
+    "tetra.material.bamboo.prefix": "Bamboo",
     "tetra.material.phantom_membrane": "Phantom membrane",
     "tetra.material.phantom_membrane.prefix": "Phantom membrane",
     "tetra.material.dragon_sinew": "Dragon sinew",
@@ -879,6 +881,8 @@
     "tetra.improvement.arrested.description": "This module is crafted from materials that will not settle over time",
     "tetra.improvement.workable.name": "Workable",
     "tetra.improvement.workable.description": "This module is crafted from materials that are easily worked, honing the item takes less time",
+    "tetra.improvement.hollow.name": "Hollow",
+    "tetra.improvement.hollow.description": "Yields a flat speed increase but reduces overall durability by 10%%",
     "tetra.improvement.quality.name": "Good Quality",
     "tetra.improvement.quality.description": "This module is of good quality, it provides a small boost to damage and harvest efficiency",
     "tetra.improvement.gilded_material.name": "Gilded",
