change: geodes now generate in the world again, they can be found in deepslate below y=0 change: deepslate blocks that contain geodes glimmer when lit change: geodes now contain raw ore instead of nuggets

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -665,7 +665,7 @@
     "block.tetra.rack.description": "Items can be hung on the rack, right-click to add or remove an item.\nA tool hung on a rack near a workbench becomes available for crafting as if it was in the player inventory, the rack needs to be within a 3x3x3 area (centered one block above the workbench) for this to work.",
     "block.tetra.block_geode": "Geode block",
     "item.tetra.geode": "Geode",
-    "item.tetra.geode.tooltip": "Breaking open at a workbench may yield valuable minerals\n \n§8Drops are affected by the fortune enchantment",
+    "item.tetra.geode.tooltip": "Presents glimmer from within in the presence of light\n \n§8Breaking open at a workbench may yield valuable minerals, drops are affected by the fortune enchantment",
     "tetra.break_geode_action.label": "Break open",
     "item.tetra.pristine_diamond": "Pristine Diamond",
     "tetra.shatter_diamond_action.label": "Shatter",
@@ -2041,7 +2041,7 @@
     "tetra.advancements.spelunking.suspend_bow.title": "Planar Intersection",
     "tetra.advancements.spelunking.suspend_bow.description": "Use two planar stabilizers to craft a bow stabilizer",
     "tetra.advancements.spelunking.geode.title": "Hollow Solids",
-    "tetra.advancements.spelunking.geode.description": "Find a geode in the depths",
+    "tetra.advancements.spelunking.geode.description": "Find a geode when mining deepslate\n\n§7Deepslate containing geodes glimmer in the presence of light",
     "tetra.advancements.spelunking.geode_open.title": "Mineral Crackers",
     "tetra.advancements.spelunking.geode_open.description": "Upgrade a mallet and use it to break open a geode at a workbench",
     "tetra.advancements.spelunking.hammer_fix.title": "Restored Machinery",
